refactor(docker): change way of build apache2 image for non symfony projects
Disable default sites-enabled configuration so custom virtual host
config works.
Set the Server name directive globally and make its output error message
banish.
Try to init debug session every time a request is caught. Thus, the ip
address of the web server (xdebug client) has not to be hardcoded.
Install unzip utility to decompress downloaded dependencies.
Declare some environment variables available during runtime from others
only
available during build time. Thus, the apache2 image can be run
generically

BREAKING CHANGE:

Manual tests have been performed to ensure the app is working as
expected.
It is suggested coding automatic ones when possible, though

--- a/DataVolumes/servers/web/projects/Dockerfile
+++ b/DataVolumes/servers/web/projects/Dockerfile
@@ -24,9 +24,9 @@ RUN apt-get update && \
 	sed -i -e "s/#AddDefaultCharset UTF-8/AddDefaultCharset UTF-8/" /etc/apache2/conf-available/charset.conf && \
 	update-rc.d apache2 defaults && \
 	mkdir -p $DR/$REMOTE_DIR/$LDRB && \
-#echo "0.0.0.0 image-thread.cbg image-thread-api.cbg" > /etc/hosts#
 	mkdir -p /var/log/apache2/$REMOTE_DIR/ && \
 	a2ensite $REMOTE_DIR.conf && \
+	a2dissite 000-default.conf && \
 #	apt-get update && \
 	apt-get --assume-yes install wget && \
 	apt-get --assume-yes install apt-transport-https lsb-release ca-certificates && \
@@ -49,10 +49,11 @@ RUN apt-get update && \
 	a2enmod proxy_fcgi setenvif && \
 	a2enconf php7.4-fpm && \
 	curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer && \
-	echo "xdebug.remote_host=172.17.0.1" >> /etc/php/7.1/mods-available/xdebug.ini && \
+	echo "ServerName $REMOTE_DIR" >> /etc/apache2/apache2.conf && \
 	echo "xdebug.remote_enable=1" >> /etc/php/7.4/mods-available/xdebug.ini && \
+	echo "xdebug.remote_connect_back=1" >> /etc/php/7.4/mods-available/xdebug.ini && \
 	apt-get update && \
-	apt-get --assume-yes install graphviz && \
+	apt-get --assume-yes install graphviz unzip && \
 	apt-get clean
 #esto es sólo necesario para el despliegue del proyecto ImageThreadAPI#
 #WORKDIR $DR/$REMOTE_DIR/$LDRB
@@ -64,8 +65,7 @@ RUN apt-get update && \
 EXPOSE 80
 COPY ./docker-entrypoint.sh /
 RUN chmod +x /docker-entrypoint.sh
-CMD ["/usr/sbin/apache2ctl", "-D", "FOREGROUND"]
-#cambiar en función del proyecto a desplegar#
-ENTRYPOINT ["/docker-entrypoint.sh", "/var/www/html/image-thread.cbg/html_root", "imageThread"]
-#ENTRYPOINT ["/docker-entrypoint.sh", "/var/www/html/image-thread-api.cbg/html_root", "imageThreadAPI"]
-#FIN cambiar en función del proyecto a desplegar#
+ENV LDRB $LDRB
+ENV REMOTE_DIR $REMOTE_DIR
+ENV LOCAL_DIR $LOCAL_DIR
+ENTRYPOINT /docker-entrypoint.sh $DR/$REMOTE_DIR/$LDRB $LOCAL_DIR /usr/sbin/apache2ctl -D FOREGROUND
