--- a/ImageThread/composer.json
+++ b/ImageThread/composer.json
@@ -2,6 +2,7 @@
 	"name" : "imagethread/imagethread",
 	"require-dev" : {
 		"php" : ">=7.0.0",
-		"phpdocumentor/phpdocumentor" : "~2.9"
+		"phpdocumentor/phpdocumentor" : "~2.9",
+		"phpunit/phpunit" : "~9.2"
 	}
 }
