chore(docker): locate docker-entrypoint while building the ddbb image
Run mariadb image successfully.
Change docker-entrypoint.sh current directory from / to /usr/local/bin

--- a/DataVolumes/servers/ddbb/config/Dockerfile
+++ b/DataVolumes/servers/ddbb/config/Dockerfile
@@ -6,4 +6,4 @@ RUN apt-get update && \
 COPY ./mariadb.cnf /etc/mysql/conf.d/mariadb.cnf
 EXPOSE 3306
 CMD ["mysqld"]
-ENTRYPOINT ["/docker-entrypoint.sh"]
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
