chore(composer): configure namespaces for the classes of the app
Autoload those classes via psr-4 convention instead of require_once
command

--- a/ImageThread/composer.json
+++ b/ImageThread/composer.json
@@ -4,5 +4,11 @@
 		"php" : ">=7.0.0",
 		"phpdocumentor/phpdocumentor" : "~2.9",
 		"phpunit/phpunit" : "~9.2"
+	},
+	"autoload" : {
+		"psr-4" : {
+			"ImageThread\\" : "src"
+		}
+	},
 	}
 }
