chore(composer): import the functions responsible for the app views
Autoload the declarations of the views related functions via the files
convention instead of require_once command calls in the app front
controller

--- a/ImageThread/composer.json
+++ b/ImageThread/composer.json
@@ -8,7 +8,14 @@
 	"autoload" : {
 		"psr-4" : {
 			"ImageThread\\" : "src"
-		}
+		},
+		"files" : [
+			"src/views/header.php",
+			"src/views/top_bar.php",
+			"src/views/reply_box.php",
+			"src/views/img_post_boxes.php",
+			"src/views/footer.php"
+		]
 	},
 	"autoload-dev" : {
 		"psr-4" : {
