chore(docker): change working directory in the Dockerfile
It used to be done in the custom docker-entrypoint script, but there is
not
such a script any more.
The working directory is also set to the document root of ImageThread
web app

--- a/DataVolumes/servers/web/projects/Dockerfile
+++ b/DataVolumes/servers/web/projects/Dockerfile
@@ -55,8 +55,8 @@ RUN apt-get update && \
 	apt-get update && \
 	apt-get --assume-yes install graphviz unzip && \
 	apt-get clean
+WORKDIR $DR/$REMOTE_DIR/$LDRB
 #esto es sólo necesario para el despliegue del proyecto ImageThreadAPI#
-#WORKDIR $DR/$REMOTE_DIR/$LDRB
 #RUN mkdir webapp_model && \
 #	mkdir assets && \
 #	mkdir webapp_controllers && \
