chore(composer): declare 'type' property and set that to 'library'

--- a/ImageThread/composer.json
+++ b/ImageThread/composer.json
@@ -54,5 +54,6 @@
 	"scripts-descriptions" : {
 		"doc" : "Generate source code documentation via phpdoc command",
 		"test" : "Run all tests via phpunit commnand"
-	}
+	},
+	"type" : "library"
 }
